[tool.poetry]
name = "strengther"
version = "0.1.0"
description = ""
authors = ["Brian Cusack <brian@stocksdigital.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pybit = "^5.8.0"
pydantic = "^2.9.1"
colorama = "^0.4.6"
pandas = "^2.2.2"
fastapi = "^0.114.2"
uvicorn = "^0.30.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
